adjusted margin-bottom to padding-bottom to avoid margin collapsing

--- a/express/code/blocks/pricing-cards-v2/pricing-cards-v2.css
+++ b/express/code/blocks/pricing-cards-v2/pricing-cards-v2.css
@@ -18,7 +18,7 @@
 }
 
 .pricing-cards-v2-wrapper {
-  margin-bottom: var(--spacing-600);
+  padding-bottom: var(--spacing-600);
 }
 
 .pricing-cards-v2 > p {
